Issue #24782 - Fixed 'View Calendar' link layout issue

--- a/resources/events-admin.css
+++ b/resources/events-admin.css
@@ -17,13 +17,12 @@ input::-webkit-input-placeholder, textarea::-webkit-input-placeholder { color: #
 	display:inline-block;
     font-weight: normal;
     padding: 0;
-    height: 14.5px;
 	}
 .view-calendar-link-div {
 	display: inline-block;
 	position: absolute;
-	left: 200px;
-	margin-top: 18px;
+	left: 155px;
+	margin-top: 14px;
 }
 
 /* = Post Type Editing
